2007-06-21  Dan Williams  <dcbw@redhat.com>

	* configure.in
	  callouts/Makefile.am
		- Add avahi-autoipd callouts

	* callouts/nm-avahi-autoipd.action
		- Action script to be executed by avahi-autoipd to forward discovered
			IP information back to NetworkManager

	* callouts/nm-avahi-autoipd.conf
		- D-Bus service config file for nm-avahi-autoipd.action

2007-06-21  Dan Williams  <dcbw@redhat.com>

	* src/nm-device.c
		- (real_act_stage3_ip_config_start): sometimes the device gets downed
			during the wpa_supplicant association.  Ensure the device is up
			before it's used for IP configuration.

2007-06-09  Dan Williams  <dcbw@redhat.com>

	* Rework to enable auto-MPP functionality.  Whenever a non-mesh device is
	activated, the mesh device will acquire an IPv4 autoip address so that
	an external program can begin MPP functionality on the mesh interface.

	* DHCP is now being used instead of the MPP server hack, and there
	is no "mesh search" step any more.

	* Driver changes also require that most
	wireless operations (channel changes, keys, ssids, etc) be done on the
	eth device, not the mesh device.

	* Remove the "post-ip" stage #6; since MPP functionality is now provided
	by DHCP, it's useless

2007-04-06  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManager.c
		- (fixup_hostname):  oops, make sure /etc/hosts has correct
			permissions

2007-04-05  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Change MPPREQ protocol port # to 16
		- Change MPPREQ anycast IP to 172.31.255.254

2007-04-05  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (real_activation_failure_handler): switch adapter back to infrastructure
			mode when not activating a mesh

2007-04-05  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Disable auto-ip and use DHCP for mesh interface configuration
		- Fix mesh activation scheme to work as described (was doing too many
			passes and channels)
